--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@vimeo/player": "^2.17.1",
     "joi": "^17.6.0",
     "lodash.throttle": "^4.1.1",
+    "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.10.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
     "parcel": "^2.7.0"
   },
   "description": ""
