--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/SergeyBelozub/goit-js-hw-08/issues"
   },
-  "homepage": "https://sergeybelozub.github.io/goit-js-hw-08/",
+  "homepage": "https://SergeyBelozub.github.io/goit-js-hw-08/",
   "dependencies": {
     "@vimeo/player": "^2.17.1",
     "joi": "^17.6.0",
