--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "bugs": {
     "url": "https://github.com/SergeyBelozub/goit-js-hw-08/issues"
   },
-  "homepage": "https://SergeyBelozub.github.io/goit-js-hw-08/",
   "dependencies": {
     "@vimeo/player": "^2.17.1",
     "joi": "^17.6.0",
@@ -30,5 +29,7 @@
     "@babel/preset-env": "^7.18.10",
     "parcel": "^2.7.0"
   },
+  "homepage": "https://SergeyBelozub.github.io/go-it-js-hw-08",
+  "main": "index.js",
   "description": ""
 }
